--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'io.github.medyo:android-about-page:2.0.0'  //About Page
+    implementation 'io.github.azhon:appupdate:4.2.6'
 }
